LCD and rotary works

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ adafruit-circuitpython-seesaw
 adafruit-blinka
 adafruit-circuitpython-lis3dh
 
+adafruit-circuitpython-charlcd
+adafruit-circuitpython-rgb-display
+
 # NO SUCH PACKAGE
 # rainbowio
 # adafruit-circuitpython-rotaryio
